# solar-panel-sim

./: .dockerignore  Cargo.toml  Dockerfile  MODBUS_CONFIGURATION.md  MODBUS_SCALING_UPDATE.md  README.md  config.json  docker-compose.dev.yml  docker-compose.yml
src/: api_docs.rs  config.rs  main.rs  modbus_server.rs  shared_state.rs
src/controllers/: mod.rs  power_controller.rs
src/models/: power.rs
src/routes/: mod.rs  power_routes.rs
src/services/: mod.rs  mqtt_service.rs  power_service.rs  solar_algorithm.rs
static/: index.html
static/css/: style.css
static/js/: app.js
