[package]
name = "solar-panel-sim"
version = "0.1.0"
edition = "2024"

[dependencies]
reqwest = { version = "0.12.28", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.48.0", features = ["full"] }
axum = "0.8.8"
chrono = { version = "0.4", features = ["serde"] }
axum-server = "0.8.0"
utoipa = { version = "5.4.0", features = ["axum_extras", "chrono"] }
utoipa-scalar = { version = "0.3.0" }
tokio-modbus = { version = "0.17.0", default-features = false, features = ["tcp-server"] }
tower-http = { version = "0.6.8", features = ["fs", "trace"] }
